// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PendingSpace should render approved correctly with props and session 1`] = `
<div
  id="pendingSpace"
>
  <div
    className="statusStatement"
  >
    Status: pending
  </div>
  <div
    className="progressStatement"
  >
    Progress: 
    3
    /
    3
  </div>
  <br />
  <div
    className="resultingStatement"
  >
    <div>
      Congrats!
      <br />
      The required user count has been met.
      <br />
      This space will be approved shortly.
    </div>
  </div>
</div>
`;

exports[`PendingSpace should render pending correctly with props and session 1`] = `
<div
  id="pendingSpace"
>
  <div
    className="statusStatement"
  >
    Status: pending
  </div>
  <div
    className="progressStatement"
  >
    Progress: 
    1
    /
    3
  </div>
  <br />
  <div
    className="resultingStatement"
  >
    <div>
      2
       more users are required to approve this space.
    </div>
  </div>
</div>
`;

exports[`PendingSpace should render pending correctly with props and session 2`] = `
<div
  id="pendingSpace"
>
  <div
    className="statusStatement"
  >
    Status: pending
  </div>
  <div
    className="progressStatement"
  >
    Progress: 
    2
    /
    3
  </div>
  <br />
  <div
    className="resultingStatement"
  >
    <div>
      1
       more user is required to approve this space.
    </div>
  </div>
</div>
`;
